# hello_work

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
platform/macos/: Info.plist
src/: audio.rs  color_schemes.rs  config.rs  db.rs  main.rs  pomo.rs  projects.rs  schema.sql  stats.rs  todo_tasks.rs  util.rs
util/monkeytype_color_schemes/: README.md  monkeytype_color_schemes_to_rust.py
