[package]
name = "hello_work"
version = "0.2.2"
edition = "2024"

[dependencies]
pliced = { git = "https://github.com/kunerd/pliced", rev = "8fff52c7426df2f7b86487e2e90ffdb129bfb300" }
directories = "6.0.0"
rusqlite = { version = "0.35.0", features = ["bundled"] }
chrono = "0.4.41"
plotters = "0.3"
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
#iced = { version = "0.13.1", features = ["smol", "wgpu"] }

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
rev = "4b075b9731f4658a885357024cc77dee10e223c3" # match to pliced version
features = ["smol", "system", "image"]

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.28"

[profile.release]
strip = true
lto = true
